--- a/popup.html
+++ b/popup.html
@@ -16,12 +16,14 @@
       margin-bottom: 15px;
       text-align: center;
       border: 2px solid #4CAF50;
+      transition: border-color 0.3s ease;
     }
     
     .score-number {
       font-size: 24px;
       font-weight: bold;
       color: #4CAF50;
+      transition: color 0.3s ease;
     }
     
     textarea {
@@ -73,6 +75,7 @@
   
   <button id="highlightBtn">Highlight Keywords</button>
   <button id="clearBtn">Clear Highlights</button>
+  <button id="toggleOverlayBtn">Toggle Score Overlay</button>
   
   <div class="keyword-list">
     <strong>Current Keywords:</strong>
